tests/ui/static/static-reference-to-fn-1.stderr
error[E0308]: mismatched types
  --> $DIR/static-reference-to-fn-1.rs:17:15
   |
LL |         func: &foo,
   |               ^^^^
   |               |
   |               expected fn pointer, found fn item
   |               help: consider casting to a fn pointer: `&(foo as fn() -> Option<isize>)`
   |
   = note: expected reference `&fn() -> Option<isize>`
              found reference `&fn() -> Option<isize> {foo}`
   = note: fn items are distinct from fn pointers

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
